--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ button {
 </div>
 
 <script>
-const API = https://script.google.com/macros/s/AKfycbyE96Kn9qqPLdUm6iC2n7QPfMryGXYFB8GSdVCDSmBbZzsO7iMyIfZhsTTERD_Y_-pf1Q/exec";
+const API ="https://script.google.com/macros/s/AKfycbyahH6-LMwOFYHqfJATiZb94NiVpdk0hv8yHNp2eiVGvkTZHPyX1Kt-9AMP8bDxaTM_Cg/exec";
 
 const params = new URLSearchParams(window.location.search);
 const orderId = params.get("orderId");
@@ -109,5 +109,6 @@ function updateStatus() {
 
 </body>
 </html>
+
 
 
